(GH-45) Reduce button and button font size

--- a/layouts/partials/tool_card.html
+++ b/layouts/partials/tool_card.html
@@ -8,8 +8,8 @@
     <p class="card-text text-break text-dark text-left">{{ trim .description "\n" }}</p>
   </div>
   <container>
-    <a class="btn btn-lg btn-primary mr-3 mb-4" href="https://github.com/{{ .owner }}/{{ .name }}">
-      GitHub <i class="fas fa-code ml-2"></i>
+    <a class="btn btn-m btn-primary mr-3 mb-4" href="https://github.com/{{ .owner }}/{{ .name }}">
+      <span style="font-size: medium;">GitHub</span> <i class="fas fa-code ml-2"></i>
     </a>
   </container>
 </div>
