--- a/layouts/partials/module_card.html
+++ b/layouts/partials/module_card.html
@@ -8,11 +8,11 @@
     <p class="card-text text-break text-dark text-left">{{ trim .description "\n" }}</p>
   </div>
   <container>
-    <a class="btn btn-lg btn-primary mr-3 mb-4" href="https://github.com/{{ .owner }}/{{ .name }}">
-      GitHub <i class="fas fa-code ml-2"></i>
+    <a class="btn btn-m btn-primary mr-3 mb-4" href="https://github.com/{{ .owner }}/{{ .name }}">
+      <span style="font-size: medium;">GitHub</span><i class="fas fa-code ml-2"></i>
     </a>
-    <a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://forge.puppet.com/modules/{{ .owner }}/{{ .name }}">
-      Forge <i class="fas fa-download ml-2 "></i>
+    <a class="btn btn-m btn-secondary mr-3 mb-4" href="https://forge.puppet.com/modules/{{ .owner }}/{{ .name }}">
+      <span style="font-size: medium;">Forge</span><i class="fas fa-download ml-2 "></i>
     </a>
   </container>
 </div>
