(GH-45) Fixup span and divs

--- a/layouts/modules/list.html
+++ b/layouts/modules/list.html
@@ -3,9 +3,11 @@
 <section class="row td-box td-box--1 position-relative td-box--gradient td-box--height-auto">
 	<div class="container text-center td-arrow-down">
 		<span class="h4 mb-0">
-<h1>Supported Modules</h1>
-
-<p>A list of the modules developed and maintained by the Content and Tooling team. See the <a href="https://forge.puppet.com/supported"> Puppet Supported Modules</a> on the forge for the commercial support policies.</p>
+			<h1>Modules</h1>
+		</span>
+		<p>The modules developed and maintained by us.</p>
+		<p>See the <a href="https://forge.puppet.com/supported"> Puppet Supported Modules</a> on the forge for the commercial support policies.</p>
+	</div>
 </section>
 
 <div class="td-content">
