--- a/layouts/tools/list.html
+++ b/layouts/tools/list.html
@@ -3,9 +3,10 @@
 <section class="row td-box td-box--1 position-relative td-box--gradient td-box--height-auto">
 	<div class="container text-center td-arrow-down">
 		<span class="h4 mb-0">
-<h1>Tools</h1>
-
-<p>A list of the tools developed and maintained by the Content and Tooling team.</p>
+			<h1>Tools</h1>
+		</span>
+		<p>A list of the tools developed and maintained by us.</p>
+	</div>
 </section>
 
 <div class="container">
