(GH-45) Puppetize the forge link

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -43,3 +43,11 @@ footer {
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   grid-gap: .5rem;
 }
+
+.link-secondary {
+    color: $secondary;
+}
+
+.link-secondary:hover {
+    color: $scondary-dark;
+}
