--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -7,6 +7,7 @@ $google_font_name: "Roboto";
 
 $primary: #333333;
 $secondary: #FFA419;
+$scondary-dark: #e48b06;
 $enable-gradients: false;
 $enable-rounded: true;
 $enable-shadows: false;
