--- a/layouts/modules/list.html
+++ b/layouts/modules/list.html
@@ -5,8 +5,8 @@
 		<span class="h4 mb-0">
 			<h1>Modules</h1>
 		</span>
-		<p>The modules developed and maintained by us.</p>
-		<p>See the <a href="https://forge.puppet.com/supported"> Puppet Supported Modules</a> on the forge for the commercial support policies.</p>
+		The modules developed and maintained by us.<br>
+		For commercial support policies, check out the <a href="https://forge.puppet.com/supported" class="link-secondary">Puppet Supported Modules</a> page on the forge.
 	</div>
 </section>
 
