--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -8,9 +8,9 @@
 <div class="row">
 	<div class="col-12">
 		{{- if .Pages -}}
+		<h2>{{ .Name }}</h2>
 		{{ $pag := .Paginate (( $.Scratch.Get "blog-pages").GroupByDate "2006")}}
 			{{ range $pag.PageGroups }}
-			<h2>{{ T "post_posts_in" }} {{ .Key }}</h2>
 			<ul class="list-unstyled mt-4">
 				{{ range .Pages }}
 				<li class="media mb-4">
