--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -51,3 +51,31 @@ footer {
 .link-secondary:hover {
     color: $scondary-dark;
 }
+
+.home-heading {
+  font-size: 1.8em;
+}
+
+.card-animation{
+  -webkit-transform: scale(1.0);
+  -ms-transform: scale(1.0);
+  transition: all .4s;
+  transform: scale(1.0);
+  -moz-transition: all .4s;
+  -webkit-transition:all .4s;
+  -o-transition: all .4s;
+}
+
+.card-animation:hover{
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transition: all .4s;
+  transform: scale(1.1);
+  -moz-transition: all .4s;
+  -webkit-transition:all .4s;
+  -o-transition: all .4s;
+  max-height: fit-content;
+  transition: filter 400ms ease-in-out;  
+  overflow: hidden;
+  cursor: pointer;
+}
