(MAINT) Improve homepage blog section
This commit adds a tooltip to the pinned post in the blog section of the
homepage. Also this commit improves the hover animation for items in the
blog section.

Lastly, this commit updates the pinned blog item.

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -69,13 +69,10 @@ footer {
 .card-animation:hover{
   -webkit-transform: scale(1.1);
   -ms-transform: scale(1.1);
-  transition: all .4s;
+  transition: transform .4s;
   transform: scale(1.1);
   -moz-transition: all .4s;
   -webkit-transition:all .4s;
   -o-transition: all .4s;
-  max-height: fit-content;
-  transition: filter 400ms ease-in-out;  
-  overflow: hidden;
   cursor: pointer;
 }
